# SDL_Game_Dev

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  README.md  TextureManager.h  TextureManger.cpp  main.cpp
cmake_modules/: FindSDL_image.cmake
resources/: Game.cpp
